crates/phc-interp/tests/snapshots/run_examples__run_every_example@async.phc.snap
---
source: crates/phc-interp/tests/run_examples.rs
expression: rendered
input_file: examples/async.phc
---

=== errors ===
no `main` function defined in this source file
