crates/phc-interp/tests/snapshots/run_examples__run_every_example@bindings.phc.snap
---
source: crates/phc-interp/tests/run_examples.rs
expression: rendered
input_file: examples/bindings.phc
---

=== result ===
void
