crates/phc-interp/tests/snapshots/run_examples__run_every_example@borrows.phc.snap
---
source: crates/phc-interp/tests/run_examples.rs
expression: rendered
input_file: examples/borrows.phc
---

=== errors ===
no `main` function defined in this source file
