crates/phc-interp/tests/snapshots/run_examples__run_every_example@fn_types.phc.snap
---
source: crates/phc-interp/tests/run_examples.rs
expression: rendered
input_file: examples/fn_types.phc
---
=== stdout ===
stored ok
returned ok
branch ok

=== result ===
void
