crates/phc-interp/tests/snapshots/run_examples__run_every_example@hello.phc.snap
---
source: crates/phc-interp/tests/run_examples.rs
expression: rendered
input_file: examples/hello.phc
---
=== stdout ===
Hello, PHC!

=== result ===
void
