crates/phc-interp/tests/snapshots/run_examples__run_every_example@list.phc.snap
---
source: crates/phc-interp/tests/run_examples.rs
expression: rendered
input_file: examples/list.phc
---
=== stdout ===
len ok
at ok
index ok
for ok

=== result ===
void
