crates/phc-interp/tests/snapshots/run_examples__run_every_example@map.phc.snap
---
source: crates/phc-interp/tests/run_examples.rs
expression: rendered
input_file: examples/map.phc
---
=== stdout ===
len ok
has ok
get ok
missing ok

=== result ===
void
